# hello-world

./: .gitattributes  .gitignore  10millionpages.html  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  Spittin bars.html  access-console-api.html  achieve-macmillanlearning-is-terrible.user.js  alerter.html  attitude.html  backdoor-test.js  base-expansions.tex  bell.html  benchmark.css  benchmark.js  big-file-viewer.html  blank-tags.html  blank.html  bones-and-muscles.html  bookmarklet.html  bot.py  calc.html  cards.html  charcode.html  chrome get all history matching query (eg "webtoons").js  chrome-list-sites-with-most-data.js  clipper-sucks.js  code-golf-boomer01-clicker-game.html  counting-numbers.js  css-expressions.ne  css-fizzbuzz.html  css-identifiers.html  delta-math.js  deltamath-time-spent.bookmarklet.js  deltamath-time.html  (+110 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
RedPitaya_workshop/: .gitignore  among_us_acquire.py  blink.py  blink_specific_leds.py  hello_world.py  redpitaya_scpi.py  syntax.py
Wi-Fi exporter/: QR scanner.js  index.html
advent-of-code/: .gitignore
audio-to-video/: .gitignore  README.md  audio-pairer.sh  audio-to-video.ts  get-audio.ts  (+6 more)
questionable-host/: .gitignore  Cargo.toml  README.md  bin.ts  handle-progress.ts  help-text.txt  index.html  instructions.html  styles.css  test.ts  test2.ts  upload-download.bundle.js  upload-download.ts  upload.html  uploader.user.js
questionable-host/gdrive/: .gitignore  pako.d.ts  upload-videos.ts
questionable-host/src/: load.rs  main.rs  util.rs
(+441 files in other folders)
