[package]
name = "questionable-host"
version = "0.1.0"
edition = "2024"

[dependencies]
dialoguer = "0.11.0"
indicatif = "0.18.0"
keyring = { version = "3.6.3", features = ["windows-native", "linux-native"] }
md5 = "0.8.0"
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
