[package]
name = "questionable-host"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
dialoguer = "0.11.0"
futures-util = "0.3.31"
indicatif = "0.18.0"
keyring = { version = "3.6.3", features = ["windows-native", "linux-native"] }
md5 = "0.8.0"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
